--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -7,66 +7,90 @@
 
         <import type="android.view.View" />
 
+        <import type="java.util.List" />
+
+        <import type="com.jlroberts.flixat.domain.model.WatchProvider" />
+
         <variable
             name="viewModel"
             type="com.jlroberts.flixat.ui.detail.DetailViewModel" />
+
+        <variable
+            name="movie"
+            type="com.jlroberts.flixat.domain.model.DetailMovie" />
+
+        <variable
+            name="watchProviders"
+            type="List&lt;WatchProvider&gt;" />
     </data>
 
-    <ScrollView
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true">
+        android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/loading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true" />
+
+        <ScrollView
+            android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true">
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/backdrop"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="325dp"
-                android:scaleType="centerCrop"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <RelativeLayout
-                android:id="@+id/backdrop_scrim"
-                android:layout_width="match_parent"
-                android:layout_height="325dp"
-                android:visibility="invisible"
-                android:background="@drawable/gradient"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/back_button"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="48dp"
-                android:contentDescription="@string/detail_back_content_description"
-                android:onClick="@{() -> viewModel.backClicked()}"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
-                app:tint="@color/md_theme_dark_onSurface" />
+                android:fitsSystemWindows="true">
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/movie_image"
-                android:layout_width="120dp"
-                android:layout_height="200dp"
-                android:layout_marginStart="16dp"
-                android:contentDescription="@string/detail_movie_image_content_description"
-                android:scaleType="centerCrop"
-                app:movieImage="@{viewModel.movie.posterPath.large}"
-                app:layout_constraintBottom_toBottomOf="@id/backdrop"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/backdrop" />
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/backdrop"
+                    android:layout_width="match_parent"
+                    android:layout_height="325dp"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <RelativeLayout
+                    android:id="@+id/backdrop_scrim"
+                    android:layout_width="match_parent"
+                    android:layout_height="325dp"
+                    android:background="@drawable/gradient"
+                    android:visibility="invisible"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/back_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="48dp"
+                    android:contentDescription="@string/detail_back_content_description"
+                    android:onClick="@{() -> viewModel.backClicked()}"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/ic_baseline_arrow_back_24"
+                    app:tint="@color/md_theme_dark_onSurface" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/movie_image"
+                    android:layout_width="120dp"
+                    android:layout_height="200dp"
+                    android:layout_marginStart="16dp"
+                    android:contentDescription="@string/detail_movie_image_content_description"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintBottom_toBottomOf="@id/backdrop"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/backdrop"
+                    app:movieImage="@{movie.posterPath.large}" />
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/title_text"
@@ -77,7 +101,7 @@
                     android:layout_marginBottom="8dp"
                     android:ellipsize="end"
                     android:maxLines="3"
-                    android:text="@{viewModel.movie.title}"
+                    android:text="@{movie.title}"
                     android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                     android:textColor="@color/md_theme_dark_onSurface"
                     app:layout_constraintBottom_toBottomOf="@+id/backdrop"
@@ -98,7 +122,7 @@
                     android:layout_marginEnd="16dp"
                     android:ellipsize="end"
                     android:maxLines="2"
-                    android:text="@{viewModel.movie.tagline}"
+                    android:text="@{movie.tagline}"
                     android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/movie_image"
@@ -110,8 +134,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
-                    android:visibility="@{viewModel.movie.releaseDate != null ? View.VISIBLE : View.INVISIBLE}"
-                    app:date='@{viewModel.movie.releaseDate}'
+                    android:visibility="@{movie.releaseDate != null ? View.VISIBLE : View.INVISIBLE}"
+                    app:date='@{movie.releaseDate}'
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0"
                     app:layout_constraintStart_toEndOf="@id/movie_image"
@@ -123,32 +147,42 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    android:text='@{viewModel.movie.runtime != null ? @string/runtime_format(viewModel.movie.runtime) : ""}'
+                    android:text='@{movie.runtime != null ? @string/runtime_format(movie.runtime) : ""}'
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0"
                     app:layout_constraintStart_toEndOf="@id/release_date"
                     app:layout_constraintTop_toBottomOf="@id/tagline"
                     tools:text="120 min" />
 
-                <com.google.android.material.chip.ChipGroup
-                    android:id="@+id/chip_group"
+                <HorizontalScrollView
+                    android:id="@+id/chipGroupLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:scrollbars="none"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/movie_image" />
+                    app:layout_constraintTop_toBottomOf="@id/movie_image">
+
+                    <com.google.android.material.chip.ChipGroup
+                        android:id="@+id/chip_group"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="16dp"
+                        android:paddingEnd="24dp"
+                        app:chipData="@{movie.genres}"
+                        app:singleLine="true" />
+                </HorizontalScrollView>
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/cast_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="16dp"
                     android:text="@string/detail_cast_label"
                     android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
-                    android:visibility="@{viewModel.movie.credits != null ? View.VISIBLE : View.GONE}"
+                    android:visibility="@{movie.credits != null ? View.VISIBLE : View.GONE}"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/chip_group" />
+                    app:layout_constraintTop_toBottomOf="@id/chipGroupLayout" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/cast_recycler"
@@ -160,7 +194,7 @@
                     android:orientation="horizontal"
                     android:paddingStart="8dp"
                     android:paddingEnd="8dp"
-                    app:castData="@{viewModel.movie.credits}"
+                    app:castData="@{movie.credits}"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -174,7 +208,7 @@
                     android:layout_marginRight="48dp"
                     android:onClick="@{() -> viewModel.trailerButtonClicked()}"
                     android:text="@string/detail_view_trailer_btn_text"
-                    android:visibility="@{viewModel.movie.videos != null ? View.VISIBLE : View.GONE}"
+                    android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/cast_recycler" />
@@ -187,7 +221,7 @@
                     android:layout_marginTop="32dp"
                     android:text="@string/detail_overview_label"
                     android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
-                    android:visibility="@{viewModel.movie.overview != null ? View.VISIBLE : View.GONE}"
+                    android:visibility="@{movie.overview != null ? View.VISIBLE : View.GONE}"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/trailer_button" />
 
@@ -196,12 +230,40 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
-                    android:text="@{viewModel.movie.overview}"
+                    android:text="@{movie.overview}"
                     android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/overview_label" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/similar_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="32dp"
+                    android:text="@string/similar_label"
+                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
+                    android:visibility="@{movie.similar.size() == 0 ? View.GONE : View.VISIBLE}"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/overview_text" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_similar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:clipToPadding="false"
+                    android:nestedScrollingEnabled="false"
+                    android:orientation="horizontal"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="8dp"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/similar_label"
+                    app:similarData="@{movie.similar}" />
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/provider_label"
@@ -211,9 +273,9 @@
                     android:layout_marginTop="32dp"
                     android:text="@string/detail_watch_providers_label"
                     android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
-                    android:visibility="@{viewModel.watchProviders.size() == 0 ? View.GONE : View.VISIBLE}"
+                    android:visibility="@{movie.watchProviders.size() == 0 ? View.GONE : View.VISIBLE}"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/overview_text" />
+                    app:layout_constraintTop_toBottomOf="@id/rv_similar" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/provider_recycler"
@@ -225,12 +287,13 @@
                     android:orientation="horizontal"
                     android:paddingStart="8dp"
                     android:paddingEnd="8dp"
-                    android:visibility="@{viewModel.watchProviders.size() == 0 ? View.GONE : View.VISIBLE}"
+                    android:visibility="@{movie.watchProviders.size() == 0 ? View.GONE : View.VISIBLE}"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/provider_label"
-                    app:watchProviderData="@{viewModel.watchProviders}" />
+                    app:watchProviderData="@{movie.watchProviders}" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+        </ScrollView>
+    </FrameLayout>
 </layout>
